@@ -19,6 +19,9 @@ V1.1.5 Friday, May 17 2013
  +Fix bug 92, Ctrl-Shift/Right-Click followed by Clear produces SegFault/Double Free.
  +Added Keyboard Input feature.
  +Fixed bug #94, spam stdout with Looking for 'indicator-menu'.
+ +Fixed bug 97, inkscape doesn't work (other objects besides text overwritten from clip).
+ +Added Restore Empty option in preferences, and added -v/--version option.
+
  
 V1.1.4 Saturday, January 19 2013
  Changes
